# today

./: Cargo.toml
src/: birthday.rs  events.rs  filters.rs  lib.rs  main.rs
src/providers/: csv.rs  mod.rs  sqlite.rs  testprovider.rs  textfile.rs  web.rs
