[package]
name = "today"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlite = "0.37.0"
toml = "1.0.6"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde_json = "1.0"
